# fast_formulaic

./: .gitignore  README.md  pyproject.toml  setup.py
benchmark/: benchmark.py
src/fast_formulaic/: __init__.py  csc.pyx  from_formula.py  materializer.py
tests/: test_from_formula.py
