[project]
dependencies = ["scipy", "numpy", "formulaic", "narwhals"]
name = "fast-formulaic"
description = "materializer for formulaic with accelerated support for large numbers of categories and interactions"
version = "0.1"
requires-python = ">= 3.11"
readme = "README.md"

[project.optional-dependencies]
dev = ["ipython", "pytest", "polars", "pyarrow"]

[build-system]
requires = ["setuptools", "numpy", "scipy", "cython"]
build-backend = "setuptools.build_meta"
